--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="main">
       <div><h2>I'm Sorry 😭</h2></div>
       <div></div>
-      <div><h2>sakura</h2></div>
+      <div><h2>Sakura 🙏🏻</h2></div>
       <div></div>
     </div>
     
